# FlaskRestAPI

./: .pre-commit-config.yaml  Dockerfile  Makefile  app.py  blocklist.py  pyproject.toml  schemas.py
migrations/versions/: 5fd914434ab7_.py  b5249ade9ce3_.py  ee5c8d93d749_.py
models/: __init__.py  items.py  items_tags.py  stores.py  tags.py  users.py
resources/: items.py  stores.py  tags.py  users.py
